--- a/Languages/Programming_Languages/Rust/Comparison_Rust_vs_Other_Lang/README.adoc
+++ b/Languages/Programming_Languages/Rust/Comparison_Rust_vs_Other_Lang/README.adoc
@@ -15,7 +15,7 @@
 * No need to call delete(),free(). Compiler will insert free()/delete() knows when memory is not used.
 
 === Rust vs C++
-==== 1. Memory safety Using Ownership & borrow checker
+==== 1. Memory safety Using Ownership & link:/Languages/Programming_Languages/Rust#bow[borrow checker]
 * link:/Languages/Programming_Languages/Rust#own[What is ownership]
 * Use-after-free or data races are detected at compile-time in rust using 
 ```c
