Update and rename Majority_Element.md to Majority_Element.adoc

--- a/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Unsorted/Majority_Element.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Unsorted/Majority_Element.adoc
@@ -1,6 +1,9 @@
-## [Majority Element](https://leetcode.com/problems/majority-element/)
-- The majority element is the element that appears more than `n / 2` times. You may assume that the majority element always exists in the array.
-- Example
+:toc:
+:toclevels: 5
+
+
+== link:https://leetcode.com/problems/majority-element/[169. Majority Element]
+The majority element is the element that appears more than `n / 2` times. You may assume that the majority element always exists in the array.
 ```c
 Input: nums = [3,2,3]
 Output: 3
@@ -10,10 +13,13 @@ Input: nums = [2,2,1,1,1,2,2]
 Output: 2
 ```
 
-### Approach-1  //Unordered_map. Time:O(n), Space:O(n)
-- **Logic**
-  - 1. Iterate thru array create, `unorderd_map<key=element, value=count>`
-  - 2. Return key having maximum value 
+== Approach-1  //Hashmap. Time:O(n), Space:O(n)
+=== Logic
+1. Iterate thru array create, `unorderd_map<key=element, value=count>`
+2. Return key having maximum value 
+
+=== Code
+==== CPP
 ```c++
 class Solution {  
     static bool compare_func(pair<int,int> i, pair<int, int> j){
@@ -37,5 +43,5 @@ public:
 };
 ```
 
-### Approach-2          //[Boyer Moore Voting Algorithm](/DS_Questions/Algorithms). Time:O(n), Space:O(1)
+== Approach-2          //link:/DS_Questions/Algorithms[Boyer Moore Voting Algorithm]. Time:O(n), Space:O(1)
 - Problem is solved there, see code there
