--- a/DS_Questions/Algorithms/Boyer_Moore/Find_Majority_Element/README.adoc
+++ b/DS_Questions/Algorithms/Boyer_Moore/Find_Majority_Element/README.adoc
@@ -69,3 +69,21 @@ impl Solution {
     }
 }
 ```
+==== Go
+```go
+func majorityElement(nums []int) int {
+    count := 0
+    majority_element := 0
+    for i := 0; i < len(nums); i++ {
+        if count == 0 {
+            majority_element = nums[i];
+        }
+        if nums[i] == majority_element {
+            count += 1;
+        } else {
+            count -= 1;
+        }
+    }
+    return majority_element
+}
+```
