--- a/DS_Questions/Algorithms/Boyer_Moore/Find_Majority_Element/README.adoc
+++ b/DS_Questions/Algorithms/Boyer_Moore/Find_Majority_Element/README.adoc
@@ -69,7 +69,7 @@ impl Solution {
     }
 }
 ```
-==== Go
+=== Go
 ```go
 func majorityElement(nums []int) int {
     count := 0
@@ -86,4 +86,19 @@ func majorityElement(nums []int) int {
     }
     return majority_element
 }
+```
+=== Python3
+```py
+class Solution:
+    def majorityElement(self, nums: List[int]) -> int:
+        count = 0
+        majority_element = 0
+        for i in nums:
+            if count == 0:
+                majority_element = i
+            if i == majority_element:
+                count += 1
+            else:
+                count -= 1
+        return majority_element
 ```
