--- a/DS_Questions/Questions/vectors_arrays/sum/Find_Polygon_With_the_Largest_Perimeter.adoc
+++ b/DS_Questions/Questions/vectors_arrays/sum/Find_Polygon_With_the_Largest_Perimeter.adoc
@@ -86,7 +86,7 @@ public:
     }
 };
 ```
-=== Rust
+==== Rust
 ```rs
 impl Solution {
     pub fn largest_perimeter(num: Vec<i32>) -> i64 {
@@ -118,5 +118,99 @@ impl Solution {
         }
         sum + nums[q] as i64
     }
+}
+```
+==== Python
+```py
+class Solution:
+    def largestPerimeter(self, nums: List[int]) -> int:
+        if len(nums) == 3 and nums[0] == nums[1] and nums[1] == nums[2]:
+            return 3*nums[0]
+
+        nums.sort()
+
+        sum = 0
+        for i in range(0, len(nums)-1):
+            sum += nums[i]
+
+        # Sliding Window
+        q = len(nums)-1
+        p = q-1
+
+        while p >= 0 and sum <= nums[q]:
+            # side remaining are 2, we cannot create polygon
+            if p==1:
+                return -1
+
+            sum -= nums[p]
+            q -= 1
+            p -= 1
+            
+        return sum + nums[q]
+```
+==== Go
+```go
+func largestPerimeter(nums []int) int64 {
+        // Equilateral Triangle
+        if len(nums) == 3 && nums[0] == nums[1] && nums[1] == nums[2] {
+            return int64(3 * nums[0])
+        }
+
+        sort.Ints(nums)
+
+        var sum int64 = 0
+        for i := 0; i < len(nums)-1; i++ {
+            sum += int64(nums[i])
+        }
+
+        // Sliding Window
+        // Short variable declaration (with type inference)
+        q := len(nums)-1
+        p := q-1
+
+        for p >= 0 && sum <= int64(nums[q]) {
+            // side remaining are 2, we cannot create polygon
+            if p==1 {
+                return -1
+            }
+
+            sum -= int64(nums[p])
+            q -= 1
+            p -= 1
+        }
+        return sum + int64(nums[q])
+}
+```
+==== C
+```c
+int cmpfunc(const void * a, const void * b) {
+   return (*(int*)a - *(int*)b);
+}
+long long largestPerimeter(int* nums, int numsSize) {
+
+    // Equilateral Triangle
+    if (numsSize == 3 && nums[0] == nums[1] && nums[1] == nums[2])
+        return 3*nums[0];
+
+    qsort(nums, numsSize, sizeof(int), cmpfunc);
+
+    long long sum = 0;
+    for (int i = 0; i < numsSize; ++i)
+        sum += nums[i];
+    sum -= nums[numsSize - 1];
+
+    // Sliding Window
+    int q = numsSize - 1, p = q - 1;
+
+    while (p >= 0 && sum <= nums[q]) {
+        // side remaining are 2, we cannot create polygon
+        if (p == 1)
+            return -1;
+
+        sum -= nums[p];
+        q--;
+        p--;
+    }
+    return sum + (long long)nums[q];
 }
 ```
