--- a/DS_Questions/Data_Structures/Queue/Priority_Queue/README.adoc
+++ b/DS_Questions/Data_Structures/Queue/Priority_Queue/README.adoc
@@ -73,8 +73,33 @@ a[] = {13,6,5,3,4,1,10}. N=7. N/2-1 = 2. Heapify=0,1,2. Start from element at in
   index=1 a[1]=6. Donot need heapification
   index=0 a[0]=13. Donot need heapification
 ```
+
 ==== Delete = O(logn)
-Rebalance is needed
+```c
+Delete root
+      13
+     /  \
+    6    10
+   / \   / \
+  3   4  1  5
+
+Step-1. Replace last leaf node with root & Delete last node
+      5                5
+     /  \             /  \
+    6    10    =>    6    10
+   / \   / \        /  \  /
+  3   4  1  13     3   4  1
+
+Heapify non-leaf nodes (5,6,10)
+10,6 donot need heapification
+
+      5            10
+     /  \         /  \
+    6   10  =>   6    5
+   / \  /       / \   /
+  3  4  1      3  4  1
+  Heapify 5
+```
 
 === B. Min Heap `priority_queue <int, vector<int>, greater<int>>`
 - Root is always least. Condition: parent =< child. Heapify only non-leaf nodes.
