--- a/DS_Questions/Questions/Number/Bitwise/Bitwise_AND_of_Numbers_Range.adoc
+++ b/DS_Questions/Questions/Number/Bitwise/Bitwise_AND_of_Numbers_Range.adoc
@@ -34,7 +34,19 @@ public:
 
 == Approach-2
 === Logic
-* When we have a range of numbers from "left" to "right", and we want to find the bitwise AND of all the numbers within that range, we need to find the common bits shared by all numbers in the range.
+* We need to find the common prefix of the binary representation of left and right.
+```c
+left = 5     101
+right= 7     111    //common prefix=1
+```
+* Perform right shift until left < right 
+```c
+            left     right
+            101      111
+right shift 10       11
+            1        1    //steps=2
+```
+* Now left shift left by steps calculated above.
 
 === Code
 ==== CPP
