Update and rename Cheapest_Flights_Within_K_Stops_Shortest_path_from_src_to_dst_with_k_or_less_edges.md to Cheapest_Flights_Within_K_Stops_Shortest_path_from_src_to_dst_with_k_or_less_edges.adoc

--- a/DS_Questions/Questions/Graphs/Find/Directed_Graph/Cyclic/Cheapest_Flights_Within_K_Stops_Shortest_path_from_src_to_dst_with_k_or_less_edges.adoc
+++ b/DS_Questions/Questions/Graphs/Find/Directed_Graph/Cyclic/Cheapest_Flights_Within_K_Stops_Shortest_path_from_src_to_dst_with_k_or_less_edges.adoc
@@ -1,16 +1,16 @@
-**Cheapest Flights Within K Stops**
-- [Logic](#l)
-- [Code](#co)
+:toc:
+:toclevels: 6
 
-## [Cheapest Flights Within K Stops](https://leetcode.com/problems/cheapest-flights-within-k-stops/)
-<a name=l></a>
-#### Logic
+== link:https://leetcode.com/problems/cheapest-flights-within-k-stops/[Cheapest Flights Within K Stops]
+
+== Approach-1
+=== Logic
 - Similar to Dijstra's Shortest path Algo we will take `minHeap<cost,node,stops>`
 - Fill neighbours, increase stops by 1.
 - When (stops > K) continue;    //ie if any node is reachable with stops > k, then its no use to consider it.
 
-<a name=co></a>
-#### Code
+=== Code
+==== CPP
 ```cpp
 using VecI = vector<int>;
 using VecVecI = vector<VecI>;
