--- a/DS_Questions/Questions/Graphs/Find/Directed_Graph/Cyclic/Cheapest_Flights_Within_K_Stops_Shortest_path_from_src_to_dst_with_k_or_less_edges.adoc
+++ b/DS_Questions/Questions/Graphs/Find/Directed_Graph/Cyclic/Cheapest_Flights_Within_K_Stops_Shortest_path_from_src_to_dst_with_k_or_less_edges.adoc
@@ -1,9 +1,23 @@
 :toc:
 :toclevels: 6
 
-== link:https://leetcode.com/problems/cheapest-flights-within-k-stops/[Cheapest Flights Within K Stops]
+== link:https://leetcode.com/problems/cheapest-flights-within-k-stops/[787. Cheapest Flights Within K Stops]
+There are n cities connected by some number of flights. You are given an array flights where flights[i] = [fromi, toi, pricei] indicates that there is a flight from city fromi to city toi with cost pricei.
 
-== Approach-1
+You are also given three integers src, dst, and k, return the cheapest price from src to dst with at most k stops. If there is no such route, return -1.
+
+Example 1:
+image:https://assets.leetcode.com/uploads/2022/03/18/cheapest-flights-within-k-stops-3drawio.png?raw=true[ex1]
+```c
+Input: n = 4, flights = [[0,1,100],[1,2,100],[2,0,100],[1,3,600],[2,3,200]], src = 0, dst = 3, k = 1
+Output: 700
+Explanation:
+The graph is shown above.
+The optimal path with at most 1 stop from city 0 to 3 is marked in red and has cost 100 + 600 = 700.
+Note that the path through cities [0,1,2,3] is cheaper but is invalid because it uses 2 stops.
+```
+
+== Approach-1. Single Source Shortest Path. Dijkstra Algo
 === Logic
 - Similar to Dijstra's Shortest path Algo we will take `minHeap<cost,node,stops>`
 - Fill neighbours, increase stops by 1.
