Update and rename EvenOddTree.md to EvenOddTree.adoc

--- a/DS_Questions/Data_Structures/Trees/BinaryTree/Traversal/Spiral/EvenOddTree/EvenOddTree.adoc
+++ b/DS_Questions/Data_Structures/Trees/BinaryTree/Traversal/Spiral/EvenOddTree/EvenOddTree.adoc
@@ -1,13 +1,56 @@
-## [Problem](https://leetcode.com/contest/weekly-contest-209/problems/even-odd-tree/)
-- A binary tree is named Even-Odd if it meets the following conditions:
-- The root of the binary tree is at level index 0, its children are at level index 1,2 and so on.
-- For every even-indexed level, all nodes at the level have odd integer values in strictly increasing order (from left to right).
-- For every odd-indexed level, all nodes at the level have even integer values in strictly decreasing order (from left to right).
-- Given the root of a binary tree, return true if the binary tree is Even-Odd, otherwise return false.
-- **Examples** See examples with pictures on Leetcode only.
+:toc:
+:toclevels: 6
 
+== link:https://leetcode.com/problems/even-odd-tree/[1609. Even Odd Tree]
 
-### [Logic Explained Video](https://youtu.be/-1mgyuRH_oA)
+A binary tree is named Even-Odd if it meets the following conditions:
+
+The root of the binary tree is at level index 0, its children are at level index 1, their children are at level index 2, etc.
+For every even-indexed level, all nodes at the level have odd integer values in strictly increasing order (from left to right).
+For every odd-indexed level, all nodes at the level have even integer values in strictly decreasing order (from left to right).
+Given the root of a binary tree, return true if the binary tree is Even-Odd, otherwise return false.
+```c
+Example 1:
+Input: root = [1,10,4,3,null,7,9,12,8,6,null,null,2]
+			1		//level=0(even). All nodes odd.
+   		      /   \ 
+	             10    4            //level=1(odd). All nodes even and decreasing(10, 4)
+	           /   \  /   \
+	          3       7    9        //level=2(even). All nodes odd and increasing(3,7,9)
+	        /  \     / \    \ 
+	       12  8    6        2      //level=3(odd). All nodes even and decreasing(12, 8, 6, 2)
+Output: true
+Explanation: The node values on each level are:
+Level 0: [1]
+Level 1: [10,4]
+Level 2: [3,7,9]
+Level 3: [12,8,6,2]
+Since levels 0 and 2 are all odd and increasing and levels 1 and 3 are all even and decreasing, the tree is Even-Odd.
+
+Example 2:
+Input: root = [5,4,2,3,3,7]
+Output: false
+Explanation: The node values on each level are:
+Level 0: [5]
+Level 1: [4,2]
+Level 2: [3,3,7]
+Node values in level 2 must be in strictly increasing order, so the tree is not Even-Odd.
+
+Example 3:
+Input: root = [5,9,1,3,5,7]
+Output: false
+Explanation: Node values in the level 1 should be even integers.
+```
+
+== Approach-1. BFS. Levels Order Traversal. O(n)
+=== link:https://youtu.be/-1mgyuRH_oA[Logic Explained Video]
+=== Logic
+* BFS=stack. DFS=queue.
+* Take 2 stacks(mainStack, tempStack). mainStack will store all elements of current node and tempStack will store children
+* Once mainStack is empty, empty tempStack and fill in main stack.
+* Maintain level variable
+** if level is even, Check all nodes are odd and decreasing
+** if level is odd, Check all nodes are even and increasing
 ```c
                        mainStack 		tempStack		//FIFO
 
@@ -53,8 +96,9 @@ Level=3		        pop 2			| |
 			empty
 ```
 
-### Code
-```c++
+=== Code
+==== CPP
+```cpp
 #include<iostream>
 #include<stack>
 #include<vector>
